<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16dp"
    app:cardCornerRadius="@dimen/radius_5dp"
    app:cardElevation="@dimen/elevation_2sp"
    app:cardUseCompatPadding="true"
    app:contentPadding="@dimen/padding_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            tools:text="@string/app_name"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/string_address"/>

        <TextView
            android:id="@+id/stars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/string_stars"/>

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/string_distance"/>

        <TextView
            android:id="@+id/suites_availability"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_12sp"
            tools:text="@string/string_suites_av"/>
    </LinearLayout>

</android.support.v7.widget.CardView>
