<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.katrindrozhak.hotels.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_200dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="@dimen/margin_20dp"
            app:expandedTitleMarginEnd="@dimen/margin_64dp"
            app:expandedTitleMarginStart="@dimen/padding_16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/anim_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/detailLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_16dp"
        android:paddingRight="@dimen/padding_16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/app_name"/>

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/string_address"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/stars_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/string_stars"/>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/distance_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/string_distance"/>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/suites_availability_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/string_suites_av"/>

        <View
            android:id="@+id/divider5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/string_lat"/>

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_1dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/lon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_16dp"
            android:textSize="@dimen/text_size_18sp"
            tools:text="@string/string_lon"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/loadLayout"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:background="@android:color/white"
        android:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
